force-app/main/default/objects/Empreendimento__c/Empreendimento__c.object-meta.xml
<CustomObject>
    <label>Empreendimento</label>
    <nameField>
        <label>Nome de Empreendimento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empreendimentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>