force-app/main/default/objects/Empreendimento__c/fields/AreaExterna__c.field-meta.xml
<CustomField>
    <fullName>AreaExterna__c</fullName>
    <inlineHelpText>Indique o percentual de conclusão da área externa do empreendimento.</inlineHelpText>
    <label>Área Externa</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>