force-app/main/default/objects/Empreendimento__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique se o empreendimento está disponível para venda de unidades.</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>