force-app/main/default/objects/Empreendimento__c/fields/CentroCustoComercial__c.field-meta.xml
<CustomField>
    <fullName>CentroCustoComercial__c</fullName>
    <label>Centro Custo Comercial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>