force-app/main/default/objects/Empreendimento__c/fields/CentroCustoEngenharia__c.field-meta.xml
<CustomField>
    <fullName>CentroCustoEngenharia__c</fullName>
    <label>Centro Custo Engenharia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>