force-app/main/default/objects/Empreendimento__c/fields/ClasseDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>ClasseDaUnidade__c</fullName>
    <label>Classe da Unidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Sala comercial</fullName>
            </value>
            <value>
                <fullName>Diferenciado</fullName>
                <isActive>false</isActive>
                <label>Diferenciado</label>
            </value>
            <value>
                <fullName>Duplex</fullName>
                <isActive>false</isActive>
                <label>Duplex</label>
            </value>
            <value>
                <fullName>Penthouse</fullName>
                <isActive>false</isActive>
                <label>Penthouse</label>
            </value>
            <value>
                <fullName>Triplex</fullName>
                <isActive>false</isActive>
                <label>Triplex</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>