force-app/main/default/objects/Empreendimento__c/fields/CNPJEmpreendimento__c.field-meta.xml
<CustomField>
    <fullName>CNPJEmpreendimento__c</fullName>
    <description>CNPJ do Empreendimento</description>
    <inlineHelpText>Verifique se o CNPJ está no formato correto: de 14 dígitos corridos</inlineHelpText>
    <label>CNPJ</label>
    <length>14</length>
    <type>Text</type>
</CustomField>