force-app/main/default/objects/Empreendimento__c/fields/CodigoEmpreendimento__c.field-meta.xml
<CustomField>
    <fullName>CodigoEmpreendimento__c</fullName>
    <description>Código do Empreendimento</description>
    <label>Código</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>