force-app/main/default/objects/Empreendimento__c/fields/Complemento__c.field-meta.xml
<CustomField>
    <fullName>Complemento__c</fullName>
    <description>Complemento do endereço</description>
    <label>Complemento</label>
    <length>150</length>
    <type>Text</type>
</CustomField>