force-app/main/default/objects/Empreendimento__c/fields/DataConclusaoPlanejada__c.field-meta.xml
<CustomField>
    <fullName>DataConclusaoPlanejada__c</fullName>
    <label>Data de Conclusão Planejada</label>
    <type>Date</type>
</CustomField>