force-app/main/default/objects/Empreendimento__c/fields/DataConclusaoReal__c.field-meta.xml
<CustomField>
    <fullName>DataConclusaoReal__c</fullName>
    <description>Indique a data final das obras para acompanhamento do progresso.</description>
    <label>Data de Conclusão Real</label>
    <type>Date</type>
</CustomField>