force-app/main/default/objects/Empreendimento__c/fields/DataDeLancamento__c.field-meta.xml
<CustomField>
    <fullName>DataDeLancamento__c</fullName>
    <description>Data de lançamento do empreendimento</description>
    <label>Data de lançamento</label>
    <type>Date</type>
</CustomField>