force-app/main/default/objects/Empreendimento__c/fields/DataDoHabitaSe__c.field-meta.xml
<CustomField>
    <fullName>DataDoHabitaSe__c</fullName>
    <description>construção da sua propriedade foi concluída com êxito</description>
    <label>Data do Habite-se</label>
    <type>Date</type>
</CustomField>