force-app/main/default/objects/Empreendimento__c/fields/DataFinalObra__c.field-meta.xml
<CustomField>
    <fullName>DataFinalObra__c</fullName>
    <description>Indique a data final das obras para acompanhamento do progresso.</description>
    <label>Data final da obra</label>
    <type>Date</type>
</CustomField>