force-app/main/default/objects/Empreendimento__c/fields/DataHabitase__c.field-meta.xml
<CustomField>
    <fullName>DataHabitase__c</fullName>
    <description>Data do Habite-se do empreendimento</description>
    <label>Data do Habita-se</label>
    <type>Date</type>
</CustomField>