force-app/main/default/objects/Empreendimento__c/fields/DataInicialObra__c.field-meta.xml
<CustomField>
    <fullName>DataInicialObra__c</fullName>
    <description>Indique a data de início das obras para acompanhamento do progresso.</description>
    <label>Data inicial da obra</label>
    <type>Date</type>
</CustomField>