force-app/main/default/objects/Empreendimento__c/fields/DataInicioPlanejada__c.field-meta.xml
<CustomField>
    <fullName>DataInicioPlanejada__c</fullName>
    <label>Data de Início Planejada</label>
    <type>Date</type>
</CustomField>