force-app/main/default/objects/Empreendimento__c/fields/DataInicioReal__c.field-meta.xml
<CustomField>
    <fullName>DataInicioReal__c</fullName>
    <description>Indique a data de início das obras para acompanhamento do progresso.</description>
    <label>Data de Início Real</label>
    <type>Date</type>
</CustomField>