force-app/main/default/objects/Empreendimento__c/fields/DataPrevistaEntregaChaves__c.field-meta.xml
<CustomField>
    <fullName>DataPrevistaEntregaChaves__c</fullName>
    <description>Indique a data prevista para entrega das chaves para os compradores.</description>
    <label>Data prevista de entrega das chaves</label>
    <type>Date</type>
</CustomField>