force-app/main/default/objects/Empreendimento__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição do empreendimento</description>
    <label>Descrição</label>
    <length>200</length>
    <type>Text</type>
</CustomField>