force-app/main/default/objects/Empreendimento__c/fields/DescricaoEmpreendimento__c.field-meta.xml
<CustomField>
    <fullName>DescricaoEmpreendimento__c</fullName>
    <label>Descrição do Empreendimento</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>