force-app/main/default/objects/Empreendimento__c/fields/DisponivelNoEspelho__c.field-meta.xml
<CustomField>
    <fullName>DisponivelNoEspelho__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Marque este campo para disponibilizar este empreendimento no espelho de vendas</description>
    <inlineHelpText>Marque este campo para disponibilizar este empreendimento no espelho de vendas</inlineHelpText>
    <label>Disponível no espelho</label>
    <type>Checkbox</type>
</CustomField>