force-app/main/default/objects/Empreendimento__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <label>Endereço</label>
    <type>Address</type>
</CustomField>