force-app/main/default/objects/Empreendimento__c/fields/Evolu_o_da_obra__c.field-meta.xml
<CustomField>
    <fullName>Evolu_o_da_obra__c</fullName>
    <label>Evolução da Obra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>