force-app/main/default/objects/Empreendimento__c/fields/EvolucaoObra__c.field-meta.xml
<CustomField>
    <fullName>EvolucaoObra__c</fullName>
    <formula>(Acabamento__c + Alvenaria__c + AreaExterna__c + Estrutura__c + Fundacao__c + Instalacoes__c) / 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evolução da Obra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>