force-app/main/default/objects/Empreendimento__c/fields/FracaoIdealTotal__c.field-meta.xml
<CustomField>
    <fullName>FracaoIdealTotal__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fração Ideal Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>