force-app/main/default/objects/Empreendimento__c/fields/Funda_o__c.field-meta.xml
<CustomField>
    <fullName>Funda_o__c</fullName>
    <label>Fundação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>