force-app/main/default/objects/Empreendimento__c/fields/Fundacao__c.field-meta.xml
<CustomField>
    <fullName>Fundacao__c</fullName>
    <inlineHelpText>Indique o percentual de conclusão da fundação do empreendimento.</inlineHelpText>
    <label>Fundação</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>