force-app/main/default/objects/Empreendimento__c/fields/Generico__c.field-meta.xml
<CustomField>
    <fullName>Generico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genérico</label>
    <type>Checkbox</type>
</CustomField>