force-app/main/default/objects/Empreendimento__c/fields/ImovelTerceiros__c.field-meta.xml
<CustomField>
    <fullName>ImovelTerceiros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imóvel de Terceiros</label>
    <type>Checkbox</type>
</CustomField>