force-app/main/default/objects/Empreendimento__c/fields/Instala_es__c.field-meta.xml
<CustomField>
    <fullName>Instala_es__c</fullName>
    <label>Instalações</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>