force-app/main/default/objects/Empreendimento__c/fields/Instalacoes__c.field-meta.xml
<CustomField>
    <fullName>Instalacoes__c</fullName>
    <inlineHelpText>Indique o percentual de conclusão das instalações do empreendimento.</inlineHelpText>
    <label>Instalações</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>