force-app/main/default/objects/Empreendimento__c/fields/IPTU__c.field-meta.xml
<CustomField>
    <fullName>IPTU__c</fullName>
    <label>IPTU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>