force-app/main/default/objects/Empreendimento__c/fields/MetragemConstruida__c.field-meta.xml
<CustomField>
    <fullName>MetragemConstruida__c</fullName>
    <label>Metragem Construída (m²)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>