force-app/main/default/objects/Empreendimento__c/fields/MetragemConstruIdaM__c.field-meta.xml
<CustomField>
    <fullName>MetragemConstruIdaM__c</fullName>
    <description>Metragem construída do empreendimento</description>
    <label>Metragem Construída (m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>