force-app/main/default/objects/Empreendimento__c/fields/MetragemDoTerreno__c.field-meta.xml
<CustomField>
    <fullName>MetragemDoTerreno__c</fullName>
    <description>Metragem do terreno</description>
    <label>Metragem do Terreno (m²)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>