force-app/main/default/objects/Empreendimento__c/fields/MetragemPrivativaTotal__c.field-meta.xml
<CustomField>
    <fullName>MetragemPrivativaTotal__c</fullName>
    <label>Metragem Privativa Total (m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>