force-app/main/default/objects/Empreendimento__c/fields/MetragemTerreno__c.field-meta.xml
<CustomField>
    <fullName>MetragemTerreno__c</fullName>
    <description>Metragem do terreno do empreendimento</description>
    <label>Metragem do Terreno (m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>