force-app/main/default/objects/Empreendimento__c/fields/N__c.field-meta.xml
<CustomField>
    <fullName>N__c</fullName>
    <description>Numero do Empreendimento</description>
    <label>Número</label>
    <length>30</length>
    <type>Text</type>
</CustomField>