force-app/main/default/objects/Empreendimento__c/fields/NomeComercial__c.field-meta.xml
<CustomField>
    <fullName>NomeComercial__c</fullName>
    <description>Nome Comercial do Empreendimento</description>
    <label>Nome Comercial</label>
    <length>200</length>
    <type>Text</type>
</CustomField>