force-app/main/default/objects/Empreendimento__c/fields/NomeDoBloco__c.field-meta.xml
<CustomField>
    <fullName>NomeDoBloco__c</fullName>
    <label>Nome do Bloco</label>
    <length>50</length>
    <type>Text</type>
</CustomField>