force-app/main/default/objects/Empreendimento__c/fields/NomeReal__c.field-meta.xml
<CustomField>
    <fullName>NomeReal__c</fullName>
    <description>Nome Real do Empreendimento</description>
    <label>Nome Real</label>
    <length>200</length>
    <type>Text</type>
</CustomField>