force-app/main/default/objects/Empreendimento__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <description>Número de Endereço do Empreendiment</description>
    <label>Número</label>
    <length>5</length>
    <type>Text</type>
</CustomField>