force-app/main/default/objects/Empreendimento__c/fields/OpcoesDeLazer__c.field-meta.xml
<CustomField>
    <fullName>OpcoesDeLazer__c</fullName>
    <label>Opções de Lazer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academia</fullName>
            </value>
            <value>
                <fullName>Área de churrasco</fullName>
            </value>
            <value>
                <fullName>Área de piquenique</fullName>
            </value>
            <value>
                <fullName>Ateliê de artesanato</fullName>
            </value>
            <value>
                <fullName>Biblioteca infantil</fullName>
            </value>
            <value>
                <fullName>Biblioteca/Sala de leitura</fullName>
            </value>
            <value>
                <fullName>Brinquedoteca</fullName>
            </value>
            <value>
                <fullName>Espaço de coleta seletiva de recicláveis</fullName>
            </value>
            <value>
                <fullName>Espaço de coworking</fullName>
            </value>
            <value>
                <fullName>Espaço gourmet</fullName>
            </value>
            <value>
                <fullName>Espaço para aulas de dança</fullName>
            </value>
            <value>
                <fullName>Espaço Pilates</fullName>
            </value>
            <value>
                <fullName>Estúdio de arte</fullName>
            </value>
            <value>
                <fullName>Estúdio de fotografia</fullName>
            </value>
            <value>
                <fullName>Horta comunitária</fullName>
            </value>
            <value>
                <fullName>Jardim Interno</fullName>
            </value>
            <value>
                <fullName>Minicampo de golfe</fullName>
            </value>
            <value>
                <fullName>Minipista de boliche</fullName>
            </value>
            <value>
                <fullName>Paredão de escalada</fullName>
            </value>
            <value>
                <fullName>Parque Interno</fullName>
            </value>
            <value>
                <fullName>Pet play</fullName>
            </value>
            <value>
                <fullName>Piscina</fullName>
            </value>
            <value>
                <fullName>Piscina Coberta</fullName>
            </value>
            <value>
                <fullName>Pista de Skate</fullName>
            </value>
            <value>
                <fullName>Pistas de corrida ou ciclismo</fullName>
            </value>
            <value>
                <fullName>Playground</fullName>
            </value>
            <value>
                <fullName>Playground aquático</fullName>
            </value>
            <value>
                <fullName>Quadra de badminton</fullName>
            </value>
            <value>
                <fullName>Quadra de basquete</fullName>
            </value>
            <value>
                <fullName>Quadra de Beach Tenis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>