force-app/main/default/objects/Empreendimento__c/fields/PrecoMedioDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>PrecoMedioDaUnidade__c</fullName>
    <label>Preço Médio da Unidade</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>