force-app/main/default/objects/Empreendimento__c/fields/PrecoMedioDaUnidadeEmp__c.field-meta.xml
<CustomField>
    <fullName>PrecoMedioDaUnidadeEmp__c</fullName>
    <formula>(RollUpMetragemDasUnidades__c * ValorMetroQuadrado__c) / RollUpQtdDeUnidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Médio da Unidade (Emp.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>