force-app/main/default/objects/Empreendimento__c/fields/rea_externa__c.field-meta.xml
<CustomField>
    <fullName>rea_externa__c</fullName>
    <label>Área Externa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>