force-app/main/default/objects/Empreendimento__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <label>Referência</label>
    <length>250</length>
    <type>Text</type>
</CustomField>