force-app/main/default/objects/Empreendimento__c/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <description>Região onde esta localizado o empreendimento. exemplo(ZONA SUL)</description>
    <label>Região</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Litoral,</fullName>
            </value>
            <value>
                <fullName>Nordeste</fullName>
            </value>
            <value>
                <fullName>Planalto Norte</fullName>
            </value>
            <value>
                <fullName>Vale do Itajaí</fullName>
            </value>
            <value>
                <fullName>Planalto Serrano</fullName>
            </value>
            <value>
                <fullName>Sul</fullName>
            </value>
            <value>
                <fullName>Meio-Oeste</fullName>
            </value>
            <value>
                <fullName>Oeste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>