force-app/main/default/objects/Empreendimento__c/fields/RollUpMetragemDasUnidades__c.field-meta.xml
<CustomField>
    <fullName>RollUpMetragemDasUnidades__c</fullName>
    <label>Metragem Total das Unidades</label>
    <summarizedField>Bloco__c.MetragemTotalDasUnidades__c</summarizedField>
    <summaryForeignKey>Bloco__c.Empreendimento__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>