force-app/main/default/objects/Empreendimento__c/fields/RollUpQtdDeUnidades__c.field-meta.xml
<CustomField>
    <fullName>RollUpQtdDeUnidades__c</fullName>
    <label>Qtd de Unidades no Empreendimento</label>
    <summarizedField>Bloco__c.TotalDeUnidades__c</summarizedField>
    <summaryForeignKey>Bloco__c.Empreendimento__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>