force-app/main/default/objects/Empreendimento__c/fields/Rua__c.field-meta.xml
<CustomField>
    <fullName>Rua__c</fullName>
    <label>Rua</label>
    <length>50</length>
    <type>Text</type>
</CustomField>