force-app/main/default/objects/Empreendimento__c/fields/StatusPlanejadoObra__c.field-meta.xml
<CustomField>
    <fullName>StatusPlanejadoObra__c</fullName>
    <formula>IF (
    ISBLANK(DataInicioReal__c ),
    IF (OR ((TODAY() &lt; DataInicioPlanejada__c), (ISBLANK(DataInicioPlanejada__c))),  &quot;Não Inicializada&quot;, &quot;Em Andamento&quot;),
				IF(ISBLANK(DataConclusaoReal__c),
								&quot;Em Andamento&quot;, 
								IF(TODAY() &lt; DataConclusaoReal__c, &quot;Em Andamento&quot;, &quot;Finalizada&quot;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Planejado da Obra</label>
    <type>Text</type>
</CustomField>