force-app/main/default/objects/Empreendimento__c/fields/StatusRealObra__c.field-meta.xml
<CustomField>
    <fullName>StatusRealObra__c</fullName>
    <label>Status Real da Obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finalizada</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Não inicializada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>