force-app/main/default/objects/Empreendimento__c/fields/ValorMetroQuadrado__c.field-meta.xml
<CustomField>
    <fullName>ValorMetroQuadrado__c</fullName>
    <label>Valor (m²)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>