force-app/main/default/objects/Empreendimento__c/fields/VGV__c.field-meta.xml
<CustomField>
    <fullName>VGV__c</fullName>
    <formula>PrecoMedioDaUnidadeEmp__c * RollUpQtdDeUnidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VGV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>